--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,11 @@
-body {
-    background-color: red;
+@font-face {
+    font-family: ImpressBT;
+    src: url('../font/Impress.ttf');
 }
 
-h1 {
-    color: lightblue;
+body {
+    background-image: url('../img/TTC.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: ImpressBT, sans-serif;
 }
