Adjusted passing of JSON data

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,6 @@
         <h1 id="header-title">Toontown Rewritten Population Checker</h1>
         <script src="{{ url_for('static', filename='js/pop.js') }}"></script>
         <h2 id="total-info">Toontown Rewritten's current total population is:</h2>
-        <p id="total-pop">{{ total_pop }}</p>
+        <p id="total-pop">{{ total_pop['totalPopulation'] }}</p>
     </body>
 </html>
