--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,18 +11,51 @@ body {
     margin: 0;
 }
 
-.navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
+#header-container {
     background-color: white;
-    position: relative;
-    height: auto;
-    overflow: auto;
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    top: 0;
+    z-index: 9999;
 }
 
+#head-title {
+    position: fixed;
+    margin: 0;
+    padding: 15px;
+    background-color: white;
+    font-size: 20pt;
+    text-align: center;
+    text-decoration: none;
+    width: 30%;
+    height: 20px;
+    left: 5%;
+    overflow: hidden;
+}
 
+#navigation.nav-container {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    overflow: hidden;
+    width: 50%;
+    height: 50px;
+    left: 50%;
+
+}
+
+.navbar {
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar #icon {
+    display: none;
+}
 
 .navbar li a {
     display: block;
@@ -31,14 +64,63 @@ body {
     text-decoration: none;
 }
 
-.navbar li a.activepage {
-    background-color: blue;
+.navbar li a#activepage {
+    background-color: rgb(255, 230, 5);
     color: white;
 }
 
 .navbar li a:hover:not(.activepage) {
-    background-color: gray;
+    background-color: rgb(160, 163, 0);
     color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .navbar .navItem {
+        display: none;
+    }
+
+    .navbar #icon {
+        display: block;
+        padding: 15px;
+        text-decoration: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    #navigation.nav-container.responsive {
+        position: fixed;
+        height: 100%;
+        background-color: white;
+    }
+
+    #navigation.nav-container.responsive #icon {
+        display: block;
+        text-decoration: none;
+    }
+
+    #navigation.nav-container.responsive a {
+      display: block;
+      width: 100%;
+      height: 35px;
+      padding: 15px 0px 0px 0px;
+    }
+
+}
+
+#body-container {
+    background-color: teal;
+    position: relative;
+    margin: auto;
+    padding: 0;
+    height: 90%;
+    top: 300px;
+}
+
+#data-container {
+    position: relative;
+    background-color: green;
+    margin: auto;
 }
 
 h1, h2, p {
