--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,9 +4,6 @@
 }
 
 body {
-    background-image: url('../img/TTC.png');
-    background-repeat: no-repeat;
-    background-size: cover;
     font-family: ImpressBT, sans-serif;
     margin: 0;
 }
@@ -18,6 +15,7 @@ body {
     width: 100%;
     top: 0;
     z-index: 9999;
+    box-shadow: 0 5px 5px rgba(128, 128, 128, 0.76);
 }
 
 #head-title {
@@ -109,20 +107,28 @@ body {
 }
 
 #body-container {
+    background-image: url('../img/TTC.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: teal;
     position: relative;
     margin: auto;
     padding: 0;
-    height: 90%;
-    top: 300px;
+    height: 50vh;
+    top: 50px;
 }
 
 #data-container {
     position: relative;
-    background-color: green;
+    background-color: white;
     margin: auto;
+    padding: 15px;
+    top: 30%;
+    width: fit-content;
+    border-radius: 20px;
+    box-shadow: 5px 5px 0 rgba(128, 128, 128, 0.76);
 }
 
-h1, h2, p {
+h1, h2, h3 {
     text-align: center;
 }
