--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ body {
     padding: 15px;
     float: right;
     text-decoration: none;
+    transition: background-color 0.3s ease-out 100ms;
 }
 
 .navbar li a#activepage {
